# fdl

./: .gitignore  README.md  README_zh.md  build.sh  development.md  pyproject.toml
doc/complex_obj/: call_name.json  call_name_random.json  call_name_ref.json  teacher.py
doc/quick_start/: hello.json  hello.py
fdl/: __init__.py  _factory.py  _handle_exception.py  _main.py  _utils.py  factory.py  helper.py  main.py  ui.py  utils.py
fdl/_common/: __init__.py  dict_config.py  log.py
fdl/_core/: __init__.py  command_gen.py  command_run.py  command_show.py
fdl/base/: __init__.py  train_loop.py
fdl/common/: __init__.py  config.py  log.py
fdl/core/: __init__.py  command_gen.py  command_run.py  command_show.py
fdl/fdlm/interface/: __init__.py  dataset_interface.py  train_interface.py
fdl/modules/: __init__.py
fdl/modules/fdlm/: __init__.py  dataset.py  model.py  torch_helper.py  train.py  transform.py
fdl/utils/: common_utils.py  torch_utils.py
resources/: demo.json
src/fdl/: __init__.py  _factory.py  _main.py  _utils.py
src/fdl/_common/: dict_config.py  log.py
src/fdl/_core/: command_gen.py  command_show.py
test/: README.md  __init__.py  detect.py  test_atonce.json  test_atonce.py  test_modules.py  tmp.py
test/ci/: test_exception.py  test_function.py
test/ci_resources/jsons/: clazz_not_register.json  construct_obj_failed.json  construct_with_exec.json  element_not_dict.json  element_without_clazz_dict.json  element_without_clazz_list.json  invalid.json  mooncake.json  name_repeat.json  (+3 more)
test/module_top/: __init__.py  top_src.py
(+4 files in other folders)
